<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/iv_image" android:background="@drawable/background_image_top" android:layout_width="match_parent" android:layout_height="350dp" android:contentDescription="@string/news_poster" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ImageButton android:id="@+id/btn_bookmark" android:background="@drawable/background_bookmark_button" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:src="@drawable/ic_baseline_bookmark_border_24" android:contentDescription="@string/bookmark" android:layout_marginEnd="25dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:tint="@color/white"/>
        <View android:id="@+id/container_top" android:background="@drawable/background_title" android:layout_width="match_parent" android:layout_height="200dp" app:layout_constraintBottom_toBottomOf="@+id/iv_image" app:layout_constraintStart_toStartOf="0"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/tv_source" android:background="@drawable/background_source" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/source" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/container_top"/>
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/tv_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/lorem_1" app:layout_constraintBottom_toBottomOf="@+id/iv_image" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_source"/>
        <View android:id="@+id/container_content" android:background="@drawable/background_content" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="4dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="@+id/bottom_content" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/iv_image"/>
        <TextView android:textStyle="italic" android:textColor="@color/black" android:id="@+id/tv_date" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/sample_date" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="@+id/container_content" app:layout_constraintTop_toTopOf="@+id/container_content"/>
        <TextView android:textStyle="italic" android:textColor="@color/black" android:id="@+id/tv_content" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/lorem_2" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="@+id/container_content" app:layout_constraintTop_toBottomOf="@+id/tv_date"/>
        <Button android:textColor="@color/white" android:id="@+id/btn_read_more" android:layout_width="200dp" android:layout_height="50dp" android:layout_marginTop="16dp" android:text="@string/read_more" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_content"/>
        <View android:id="@+id/bottom_content" android:layout_width="match_parent" android:layout_height="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/btn_read_more"/>
        <TextView android:textSize="36sp" android:textStyle="bold" android:textColor="@color/black" android:ellipsize="end" android:id="@+id/tv_headline" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/recommendation" android:maxLines="1" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/container_content"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_news" android:background="#f3f3f3" android:paddingBottom="75dp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_headline"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
