<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/background" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/tv_error" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/something_wrong" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ProgressBar android:id="@+id/pg" android:visibility="gone" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="50dp" android:elevation="10dp" android:indeterminateTint="@color/black" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ImageView android:id="@+id/iv_image" android:background="@drawable/background_image_top" android:layout_width="match_parent" android:layout_height="350dp" android:contentDescription="@string/news_poster" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <View android:id="@+id/container_top" android:background="@drawable/background_title" android:layout_width="match_parent" android:layout_height="150dp" app:layout_constraintBottom_toBottomOf="@+id/iv_image" app:layout_constraintStart_toStartOf="0"/>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/tv_source" android:background="@drawable/background_source" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/source" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/container_top"/>
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:id="@+id/tv_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/lorem_1" android:maxLines="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_source"/>
        <Button android:textSize="14sp" android:textColor="@color/white" android:id="@+id/btn_read_more" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read_more" android:drawableEnd="@drawable/ic_baseline_arrow_right_alt_24_white" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
        <TextView android:textSize="36sp" android:textStyle="bold" android:textColor="@color/black" android:ellipsize="end" android:id="@+id/tv_headline" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/headlines" android:maxLines="1" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/btn_read_more"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_news" android:background="#f3f3f3" android:paddingBottom="75dp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_headline"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
