<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <ProgressBar android:id="@+id/pg" android:visibility="gone" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="50dp" android:elevation="10dp" android:indeterminateTint="@color/black" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:id="@+id/tv_error" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/something_wrong" android:textAlignment="center" android:elevation="10dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <ImageButton android:id="@+id/btn_close" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_baseline_close_24" android:contentDescription="@string/button_close" android:layout_marginStart="20dp" app:layout_constraintBottom_toBottomOf="@+id/tv_title" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/tv_title" app:tint="@color/black"/>
    <TextView android:textSize="16sp" android:textColor="@color/black" android:id="@+id/tv_title" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/lorem_1" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="10dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/btn_close" app:layout_constraintTop_toTopOf="0"/>
    <WebView android:id="@+id/webview" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>
