<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:theme="@style/Theme.News" android:paddingTop="40dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="36sp" android:textStyle="bold" android:textColor="@color/black" android:ellipsize="end" android:id="@+id/tv_headline" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/search" android:maxLines="1" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textSize="12sp" android:textColor="@color/black" android:ellipsize="end" android:id="@+id/tv_headline_desc" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/desc_headlines" android:maxLines="1" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_headline"/>
    <EditText android:id="@+id/et_news" android:background="@drawable/background_et" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:hint="@string/search" android:drawablePadding="16dp" android:inputType="text" android:drawableStart="@drawable/ic_baseline_search_24" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:autofillHints="@string/search" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_headline_desc"/>
    <ProgressBar android:id="@+id/pg" android:visibility="gone" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="50dp" android:elevation="10dp" android:indeterminateTint="@color/black" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/et_news"/>
    <TextView android:id="@+id/tv_error" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50dp" android:text="@string/something_wrong" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/et_news"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_news" android:background="#f3f3f3" android:paddingBottom="75dp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="16dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/et_news"/>
</androidx.constraintlayout.widget.ConstraintLayout>
